# stt

./: .gitignore  README.md
.cargo/: .global-cache
.cargo/registry/cache/index.crates.io-1949cf8c6b5b557f/: autotools-0.2.7.crate  camino-1.2.1.crate  cc-1.2.41.crate  clipboard-win-5.4.1.crate  coreaudio-rs-0.11.3.crate  coreaudio-sys-0.2.17.crate  deep_filter-0.2.5.crate  dlopen2-0.8.0.crate  dlopen2_derive-0.4.1.crate  erased-serde-0.4.8.crate  flate2-1.1.4.crate  gdkwayland-sys-0.18.2.crate  gdkx11-0.18.2.crate  gdkx11-sys-0.18.2.crate  javascriptcore-rs-1.1.2.crate  javascriptcore-rs-sys-1.1.1.crate  libappindicator-0.9.0.crate  libappindicator-sys-0.9.0.crate  link-cplusplus-1.0.12.crate  llama_cpp-0.3.2.crate  mach2-0.4.3.crate  mio-1.1.0.crate  ndk-0.8.0.crate  objc2-ui-kit-0.3.2.crate  oboe-0.6.1.crate  oboe-sys-0.6.1.crate  ort-2.0.0-rc.10.crate  ort-sys-2.0.0-rc.10.crate  quick-xml-0.38.3.crate  reqwest-0.12.24.crate  rodio-0.17.3.crate  rustls-0.23.33.crate  rustls-webpki-0.103.7.crate  serde_spanned-1.0.3.crate  serde_with-3.15.0.crate  serde_with_macros-3.15.0.crate  sherpa-rs-0.6.8.crate  sherpa-rs-sys-0.6.8.crate  smallvec-2.0.0-alpha.10.crate  soup3-0.5.0.crate  (+34 more)
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/autotools-0.2.7/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/coreaudio-rs-0.11.3/: .cargo_vcs_info.json
app/: .gitignore  index.html  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  styles.css
app/src-tauri/: Cargo.toml
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/asr/: engine.rs  mod.rs  sherpa.rs
app/src-tauri/src/audio/: mod.rs  pipeline.rs  preprocess.rs
app/src-tauri/src/core/: app_state.rs  dev_simulator.rs  events.rs  hotkeys.rs  mod.rs  pipeline.rs  settings.rs
app/src-tauri/src/llm/: autoclean.rs  mod.rs  polish.rs
app/src-tauri/src/models/: download.rs  manager.rs  metadata.rs  mod.rs  service.rs
app/src-tauri/src/output/: injector.rs  logs.rs  mod.rs  tray.rs  win_access.rs  windows_clipboard.rs  windows_paste.rs
app/src-tauri/src/vad/: engine.rs  mod.rs  silero.rs
app/src/components/: HUD.tsx  LogViewer.tsx  SettingsPanel.tsx  ToastStack.tsx
app/src/state/: appStore.ts
ci/: build-webrtc-apm.ps1  fetch-onnxruntime.yml  sign-msi.yml
docs/: agents.md  architecture.md  sherpa-onnx.md
(+121 files in other folders)
