[package]
name = "push-to-talk-stt"
version = "0.1.0"
description = "Push-to-Talk STT application backend"
authors = ["Push-to-Talk Team"]
license = "MIT"
edition = "2021"

[lib]
name = "push_to_talk"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["sync", "rt-multi-thread", "time", "macros"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
once_cell = "1.19"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "5.0"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }
crossbeam-channel = "0.5"
rodio = "0.17"
cpal = "0.15"
hound = "3.5"
regex = "1.10"
sha2 = "0.10"
clipboard-win = { version = "5.0", optional = true }
ort = { version = "2.0.0-rc.10", optional = true }
windows = { version = "0.53", optional = true, features = ["Win32_System_Com", "Win32_UI_Accessibility"] }
sherpa-rs = { version = "0.6.8", optional = true, features = ["sys"] }
llama_cpp = { version = "0.3.2", optional = true, default-features = false, features = ["compat"] }
webrtc-audio-processing = { version = "0.5", optional = true, features = ["bundled"] }
deep_filter = { version = "0.2.5", optional = true, default-features = false }
sysinfo = "0.30"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4"
flate2 = { version = "1.0", features = ["rust_backend"] }
bzip2 = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[features]
default = ["audio", "hud", "models", "real-audio", "asr-sherpa", "llama-polish", "webrtc-apm", "vad-silero"]
audio = []
hud = []
models = []
windows-clipboard = ["clipboard-win"]
real-audio = []
vad-silero = ["ort"]
asr-sherpa = ["sherpa-rs"]
llama-polish = ["llama_cpp"]
webrtc-apm = ["webrtc-audio-processing"]
enhanced-denoise = ["deep_filter"]
windows-accessibility = ["windows"]

[patch.crates-io]
webrtc-audio-processing-sys = { path = "../vendor/webrtc-audio-processing-sys" }
